--- a/index.html
+++ b/index.html
@@ -877,7 +877,7 @@ animation: auto 12s infinite ease-in;
   width: 80%;
   height: auto;
   border-top: 2rem solid rgba(214, 214, 214, 0.249);;
-  margin-top: 4.1rem;
+  margin-top: 4.3rem;
 }
 
 .kpt{
@@ -1380,9 +1380,9 @@ transition: 0.26s linear;
   width: 79%;
   height: 100px;
   font-family: 'arial black';
-  font-size: 1.75em;
-  color: #969696c2;
-  border-top: 2rem solid rgba(204, 202, 202, 0.249);
+  font-size: 1.55em;
+  color: #939393c2;
+  border-top: 2rem solid rgba(208, 208, 208, 0.249);
 
 }
 
@@ -2414,7 +2414,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </div>
 
 <div class="PaintingTitle">
-  Photos des changements climatiques à travers le monde
+  Photos des changements climatiques à travers les 5 continents 
 </div>
 
 <div class="Painting">
@@ -2528,12 +2528,9 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
     </figcation>
       </figure>
    </div>
-
+   <a name="PROMOTEUR"></a>  
   </div>
 </div>
-
-
-<a name="PROMOTEUR"></a>  
 
   <div class="kptr">
   
