--- a/index.html
+++ b/index.html
@@ -2424,7 +2424,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
   
   <div class="PHOTOCAPTION">
   <h1> 
-    Sol aride en Mauritanie
+    Sol aride en Afrique
   </h1>
   </div>
   
@@ -2483,10 +2483,10 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
     </div>
   
     <div>
-    <img src="https://static01.nyt.com/images/2021/07/16/climate/16cli-floodexplain1/merlin_190930506_3ab1afea-9ab0-4bfe-9c5a-82d04496e181-superJumbo.jpg?quality=75&auto=webp">
+    <img src="https://www.reuters.com/resizer/kpXfoTr8N5YWMPbPQx963kVhIsE=/960x0/filters:quality(80)/cloudfront-us-east-2.images.arcpublishing.com/reuters/HZ4YVKFRVVJBJG34DKRJXCPGMY.jpg">
     <figure>
       <figcaption style="font-family:Verdana, Geneva, Tahoma, sans-serif; font-size: 12px; color:rgba(65, 65, 65, 0.895)">
-        Copyright © Friedemann Vogel/EPA, via Shutterstock
+        Copyright ©  REUTERS/Wolfgang Rattay/
     </figcation>
       </figure>
    </div>
@@ -2625,6 +2625,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
