--- a/index.html
+++ b/index.html
@@ -1068,7 +1068,7 @@ height: 750px;
     align-items: center;
     background: transparent;
     border: 0.12rem solid #aaaaaacb;
-    color: #848383da; 
+    color: rgb(255, 3, 137);; 
     padding: 10px; 
     font-size: 22px;
     cursor: pointer;
@@ -1078,7 +1078,7 @@ height: 750px;
     background:rgb(0, 151, 0);
     color: #ff0;
     transition: 0.3s linear;
-    box-shadow: 6px 6px 0.6rem 0.15px red;
+    box-shadow: 6px 5px 0.55rem 0.15px red;
 }
 .FTR{
   width: 500px; 
@@ -1102,13 +1102,14 @@ height: 750px;
 }
 
 .FTR:hover{
+  background: #f3f3f3;
   transition: 0.25s linear;
   border: 0.12rem solid #eeeeee; 
-  color: rgba(255, 18, 145, 0.94);
+  color: #000;
   box-shadow: none;
 }
 a:visited{
-  color: rgba(255, 10, 141, 0.993);
+  color: rgb(255, 3, 137);
 }
 
 .Ecole{
@@ -1423,7 +1424,7 @@ transition: 0.26s linear;
   width: 100%;
   height: 40px;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  color:rgb(2, 157, 228);
+  color:rgb(2, 164, 239);
 
 }
 </style>
@@ -2424,7 +2425,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
   
   <div class="PHOTOCAPTION">
   <h1> 
-    Sol aride en Afrique
+    Sécheresse en Afrique
   </h1>
   </div>
   
@@ -2442,7 +2443,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
   
   <div class="PHOTOCAPTION">
     <h1> 
-      Sol aride en Asie
+      Sécheresse en Asie
     </h1>
     </div>
   
@@ -2460,7 +2461,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
   <div class="PHOTOCAPTION">
     <h1> 
-     Feu à Mistissini-Québec
+     Feu de forêt au Québec
     </h1>
     </div>
   
@@ -2497,7 +2498,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
   
   <div class="PHOTOCAPTION">
     <h1> 
-      Feu en Australie
+      Feu de forêt en Australie
     </h1>
     </div>
   
@@ -2516,7 +2517,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
     <div class="PHOTOCAPTION">
       <h1> 
-        Feu en Californie
+        Feu de forêt en Californie
       </h1>
       </div>
 
@@ -2625,6 +2626,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
