--- a/index.html
+++ b/index.html
@@ -1898,7 +1898,7 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
   <img src="https://www.zupimages.net/up/23/28/mhd5.jpg" alt="Tableau">
 <figure>
 <figcaption style="color: #545454eb; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; margin-top: -3px; font-size: 15px; text-align: left; line-height: 17px;">
-<b>Alphabet */* Lettre [ M ]</b>
+<b>Alphabet de la lettre [ M ]</b>
 </figcaption>
 </figure>
 </div>
@@ -1978,7 +1978,7 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
   <div>
 <img src="https://zupimages.net/up/22/31/z42x.jpg">
 <figure>
-<figcaption style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 16.16px; color: #3e3e3e;">
+<figcaption style="font-family:Georgia, 'Times New Roman', Times, serif; font-size: 19px; color: #6e6e6eef;">
  Arbre de Noël 2016 organisé par Tiki N'Yiki au secteur 1 de Ziniaré
 </figcaption>
 </figure>
@@ -2102,7 +2102,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
             <img src="https://www.zupimages.net/up/23/24/1dre.jpg" alt="Ardoise">
             <figure>
             <figcaption style=" color: #000; font-family: 'verdana'; font-size: 14px; text-align: left; margin-top: 3px;">
-              La lettre E avec les accents  
+              Approche de la lettre E avec les accents  
             </figcaption>
             
       </figure>
