--- a/index.html
+++ b/index.html
@@ -885,7 +885,7 @@ animation: auto 12s infinite ease-in;
   height: auto;
   font-family:Arial, Helvetica, sans-serif;
   line-height: 25px;
-  color: #224e90f3;
+  color: #20529d;
   word-spacing: 1.5px;
   text-align: left;
   font-size: 17.49px; 
@@ -2557,22 +2557,22 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                        </a> dans laquelle il a enseigné des enfants handicapés et orphelins, animé de multiples séances de sensibilisation avec thème focal "Handicap et Inclusion Sociale" de 2006 à 2014.
                        <br>
                        <br>
-                       En 2007, 2008, 2013, Gabriel a voyagé en Europe pour la recherche de Fonds notamment à Genève et à Sion en Suisse en collaboration avec <a href="https://www.transporthandicap.ch/www/1-accueil" target="_blank"> Transport Handicap Valais</a> et à Karlsruhe en Allemagne pour des conférences sur l'association PAAS NEERE dont il était président, les différents projets à implémenter, les défis à atteindre et son impact au sein des communautés dans la région de Ziniare.
+                       En 2007, 2008, 2013, Gabriel a voyagé en Europe pour la recherche de fonds. Ses séjours l'ont conduit notamment à Genève et à Sion en Suisse en collaboration avec <a href="https://www.transporthandicap.ch/www/1-accueil" target="_blank"> Transport Handicap Valais</a> et à Karlsruhe en Allemagne pour donner des conférences sur l'association PAAS NEERE dont il était président, les différents projets à implémenter, les défis à atteindre et l'impact de l'association pour les communautés locales de la région de Ziniare.
                       <br>
                       <br>
-                      En 2012, il a été décoré Chevalier de l'Ordre du Mérite par l'état du Burkina Faso pour l'ensemble de sa contribution au développement et l'épanouissement d'une communauté différente, marginalisée dans la société en occurence les personnes handicapées.
+                      En 2012, il a été décoré Chevalier de l'Ordre du Mérite par l'état du Burkina Faso pour l'ensemble de sa contribution au développement et l'épanouissement d'une communauté différente, marginalisée dans la société dont sont les personnes handicapées.
                       <br>
                       <br>
-                      En 2016 il a crée Tiki N'Yiki pour élargir le soutien aux enfants orphelins. En Juillet 2016 Gabriel a été invité aux Etats-Unis pendant 3 mois pour du FUNDRAISING au profit des projets de Tiki N'Yiki.
+                      En 2016 il a crée Tiki N'Yiki pour élargir le soutien aux enfants orphelins. En Juillet 2016 Gabriel a été invité aux Etats-Unis pendant 3 mois pour faire du FUNDRAISING au profit des projets de Tiki N'Yiki.
                       <br>
                        <br>
-                      En 2017 il était obligé de s'exiler au Canada pour des raisons sécuritaires si bien que certaines activités de Tiki N'Yiki y compris le volet EDUCATION ont été interrompues. Mais elles vont être redéfinies si les conditions de sécurité se réunissent. 
+                      En 2017 il était obligé de s'exiler au Canada pour des raisons sécuritaires si bien que certaines activités de Tiki N'Yiki y compris le projet EDUCATION ont été momentanément interrompues. Elles vont être redéfinies si la sécurité se rétablit. 
                       <br>
                       <br>
-                      Résident permanent Canadien, il se reconstruit une nouvelle autre vie. Entre autres, il écrit ses mémoires, apprend le code informatique tout en souhaitant se former aux sciences des nouvelles technologies. Il se passione en développant ce site internet pour mieux présenter Tiki N'Yiki. 
+                      Résident permanent Canadien, il se reconstruit une nouvelle vie. Entre autres, il écrit ses mémoires, apprend le code informatique tout en souhaitant se former aux sciences des nouvelles technologies. Il se passione en développant ce site internet. 
                       <br>
                       <br>
-                      Gabriel veut créer une fondation pour soutenir l'éducation des enfants handicapés et défendre leurs droits intrinsèques afin de leur créer des opportunités pour une meilleure inclusion sociale <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank"> au Burkina Faso.</a>
+                      Gabriel veut créer une fondation pour soutenir l'éducation des enfants handicapés, défendre leurs droits et leur créer des opportunités<a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank"> au Burkina Faso.</a>
                      Il aime la nature, la photographie, l'histoire, la géographie, l'architecture, le cyclisme, le football et le hockey sur glace.
                     </p>      
       </div>
@@ -2626,5 +2626,6 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
