--- a/index.html
+++ b/index.html
@@ -876,7 +876,7 @@ animation: auto 12s infinite ease-in;
   justify-content: space-between;
   width: 79%;
   height: auto;
-  border-top: 2rem solid rgba(214, 214, 214, 0.249);;
+  border-top: 2rem solid rgba(189, 189, 189, 0.425);
   margin-top: 4.7rem;
 }
 
@@ -1381,9 +1381,9 @@ transition: 0.26s linear;
   width: 79%;
   height: 100px;
   font-family: 'arial black';
-  font-size: 1.55em;
-  color: #939393c2;
-  border-top: 2rem solid rgba(208, 208, 208, 0.249);
+  font-size: 1.2em;
+  color: #9e9e9ec0;
+  border-top: 2rem solid rgba(189, 189, 189, 0.425);
 
 }
 
@@ -2415,7 +2415,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </div>
 
 <div class="PaintingTitle">
-  Photos des changements climatiques à travers les 5 continents 
+  Des photos illustrant l'impact des changements climatiques à travers les 5 continents 
 </div>
 
 <div class="Painting">
@@ -2626,6 +2626,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
