--- a/index.html
+++ b/index.html
@@ -833,10 +833,10 @@ animation: auto 12s infinite ease-in;
     text-align: justify;
     width: 74%;
     height: auto;
-    line-height: 27px;
-    font-size: 17.5px; 
-    color: #000;
-    font-family:'helvetica';
+    line-height: 29px;
+    font-family:Georgia, 'Times New Roman', Times, serif; 
+    font-size: 19.5px; 
+    color: rgba(23, 23, 23, 0.899);
     word-spacing: 0.25px;
     padding: 10px;
 }
@@ -956,10 +956,10 @@ animation: auto 12s infinite ease-in;
     text-align: justify;
     width: 101%;
     height: auto;
-    line-height: 28px;
-    font-size: 17.5px; 
-    color: #000;
-    font-family: 'helvetica'; 
+    line-height: 29px;
+    font-family:Georgia, 'Times New Roman', Times, serif; 
+    font-size: 19.5px; 
+    color: rgba(23, 23, 23, 0.899);
     word-spacing: 0.25px;
 }
 
@@ -1210,10 +1210,10 @@ height: 220px;
 .TXT{
   width: 100%;
   height: auto;
-  line-height: 28px;
-    font-size: 17.5px; 
-    color: #000;
-    font-family: 'helvetica'; 
+  line-height: 29px;
+    font-family:Georgia, 'Times New Roman', Times, serif; 
+    font-size: 19.5px; 
+    color: rgba(23, 23, 23, 0.899); 
     word-spacing: 0.25px;
     text-align: justify;
 }
@@ -1228,10 +1228,10 @@ height: 220px;
     text-align: justify;
     width: 72.5%;
     height: auto;
-    line-height: 28px;
-    font-size: 17.5px; 
-    color: #000;
-    font-family: 'helvetica'; 
+    line-height: 29px;
+    font-family:Georgia, 'Times New Roman', Times, serif; 
+    font-size: 19.5px; 
+    color: rgba(23, 23, 23, 0.899);
     word-spacing: 0.25px;
     border-top: 0.1rem solid #000;
 }
@@ -1244,10 +1244,10 @@ height: 220px;
   justify-items: center;
   width: 100%;
   height: auto;
-  line-height: 28px;
-    font-size: 17.5px;  
-    color: #000;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+  line-height: 29px;
+    font-family:Georgia, 'Times New Roman', Times, serif; 
+    font-size: 19.5px; 
+    color: rgba(23, 23, 23, 0.899);
     word-spacing: 0.25px;
 }
 
@@ -1295,10 +1295,10 @@ transition: 0.26s linear;
   justify-items: center;
   width: 100%;
   height: auto;
-  line-height: 28px;
-    font-size: 17.5px; 
-    color: #000;
-    font-family: 'helvetica'; 
+  line-height: 29px;
+    font-family:Georgia, 'Times New Roman', Times, serif; 
+    font-size: 19.5px; 
+    color: rgba(23, 23, 23, 0.899);
     word-spacing: 0.25px;
     border-top: 0.1rem solid #000;
 }
@@ -1330,18 +1330,20 @@ transition: 0.26s linear;
   justify-items: center;
   width: 74%;
   height: auto;
-  line-height: 28px;
-    font-size: 17.5px; 
-    color: #000;
+  line-height: 29px;
+    font-family:Georgia, 'Times New Roman', Times, serif; 
+    font-size: 19.5px; 
+    color: rgba(23, 23, 23, 0.899);
     border-top: 0.1rem solid #000;
     margin-top: 2.5rem;
   
 }
 
 .Texo{
-  line-height: 28px;
-    font-size: 17.5px; 
-    color: #000;
+  line-height: 29px;
+    font-family:Georgia, 'Times New Roman', Times, serif; 
+    font-size: 19.5px; 
+    color: rgba(23, 23, 23, 0.899);
     text-align: justify;
 }
 
@@ -1978,7 +1980,7 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
   <div>
 <img src="https://zupimages.net/up/22/31/z42x.jpg">
 <figure>
-<figcaption style="font-family:Georgia, 'Times New Roman', Times, serif; font-size: 19px; color: #6e6e6eef;">
+<figcaption style="font-family:Georgia, 'Times New Roman', Times, serif; font-size: 20px; color: #6c6c6ce9;">
  Arbre de Noël 2016 organisé par Tiki N'Yiki au secteur 1 de Ziniaré
 </figcaption>
 </figure>
@@ -2626,6 +2628,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
