--- a/index.html
+++ b/index.html
@@ -853,10 +853,9 @@ animation: auto 12s infinite ease-in;
   justify-items: center;
   width: 100%;
   height: auto;
-  padding: 2px;
+  margin-bottom: 1rem;
 }
 .Noel:hover{
-  padding: 2px;
   transition: 0.26s linear;
   box-shadow: 8px 8px 0.6rem 0.45px rgba(196, 196, 196, 0.724);
   border-bottom: 1rem;
