--- a/index.html
+++ b/index.html
@@ -1377,7 +1377,7 @@ transition: 0.26s linear;
   height: 100px;
   font-family: 'arial black';
   font-size: 1.1em;
-  color: #a2a2a2c0;
+  color: #969696c0;
   border-top: 2rem solid rgba(189, 189, 189, 0.425);
 
 }
@@ -1398,7 +1398,7 @@ transition: 0.26s linear;
 .P1{
   display: grid;
   grid-template-rows: 30px 1fr;
-  row-gap: 0.5rem;
+  row-gap: 1rem;
   justify-content: space-between;
   justify-items: center;
   width: 500px;
@@ -1419,7 +1419,7 @@ transition: 0.26s linear;
   width: 100%;
   height: 40px;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  color:rgb(2, 164, 239);
+  color:rgb(2, 160, 239);
 
 }
 </style>
@@ -2282,7 +2282,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         </span>
         <br><br>
           
-          Il n'y a aucun doute que quand les un-es mangent à leur faim, à quelque part à travers le monde, il y a aussi d'autres personnes qui meurent de faim. C'est une réalité paradoxale qui touche malheureusement des milliers de personnes. 
+          Il n'y a aucun doute que quand les un-es mangent à leur faim, à quelque part à travers le monde, il y a aussi d'autres qui meurent de faim. C'est une réalité paradoxale qui touche malheureusement des milliers de personnes. 
           <br>
           <br>
           L'insécurité alimentaire s'est surtout aggravée dans les pays en proie au terrorisme violent qui a généré une crise humanitaire avec un grand nombre de réfugiés internes
@@ -2422,9 +2422,9 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 <div class="P1">
   
   <div class="PHOTOCAPTION">
-  <h1> 
-    Sécheresse en Afrique
-  </h1>
+  <h3> 
+    Sol aride causé par la sécheresse en Afrique
+  </h3>
   </div>
   
   <div>
@@ -2440,9 +2440,9 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 <div class="P1">
   
   <div class="PHOTOCAPTION">
-    <h1> 
-      Sécheresse en Asie
-    </h1>
+  <h3>
+    Sol aride causé par la sécheresse en Asie
+    </h3>
     </div>
   
     <div>
@@ -2458,9 +2458,9 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 <div class="P1">
 
   <div class="PHOTOCAPTION">
-    <h1> 
-     Feu de forêt au Québec
-    </h1>
+  <h3>
+     Feu de forêt près de Mistissini au Québec
+    </h3>
     </div>
   
     <div>
@@ -2476,9 +2476,9 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 <div class="P1">
   
   <div class="PHOTOCAPTION">
-    <h1> 
-      Inondation en Allemagne 
-    </h1>
+  <h3>
+      Inondation de pluies diluviennes en Allemagne 
+    </h3>
     </div>
   
     <div>
@@ -2495,9 +2495,9 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 <div class="P1">
   
   <div class="PHOTOCAPTION">
-    <h1> 
+  <h3>
       Feu de forêt en Australie
-    </h1>
+    </h3>
     </div>
   
     <div>
@@ -2514,9 +2514,9 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
    <div class="P1">
 
     <div class="PHOTOCAPTION">
-      <h1> 
+    <h3> 
         Feu de forêt en Californie
-      </h1>
+      </h3>
       </div>
 
    <div>
@@ -2624,6 +2624,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
