--- a/index.html
+++ b/index.html
@@ -259,12 +259,12 @@
           flex-direction: column; 
           justify-content: center; 
           align-items: center; 
-          color:rgba(33, 48, 187, 0.992);
+          color: yellow;
           width: auto; 
           height: 75px; 
           padding: 9.5px; 
-          font-size: 1.1rem; 
-          font-family: 'arial black'; 
+          font-size: 1.15rem; 
+          font-family: 'arial'; 
           border-bottom-left-radius: 50rem;
           border-bottom-right-radius: 50rem;
           background: -webkit-linear-gradient( red 0%,#fff 100%);
@@ -1399,12 +1399,11 @@ transition: 0.26s linear;
   display: grid;
   grid-template-rows: 30px 1fr;
   row-gap: 1rem;
-  justify-content: space-between;
+  justify-content: center;
   justify-items: center;
   width: 500px;
   height: auto;
-  padding: 10px; 
-  margin-left: 0.5rem; 
+  padding: 10px;  
   margin-top: 1rem;
 }
 
@@ -1521,7 +1520,7 @@ function myFunction() {
 
         <div class="YIKI">
         
-        <p style="margin-top: 10px;">Tiki N'Yiki</p>
+        <p style="margin-top: 14px;"> <b>Tiki N'Yiki</b></p>
       
                 </div>
               </a>
@@ -2624,6 +2623,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
