--- a/index.html
+++ b/index.html
@@ -267,9 +267,9 @@
           font-family: 'arial'; 
           border-bottom-left-radius: 50rem;
           border-bottom-right-radius: 50rem;
-          background: -webkit-linear-gradient( red 0%,#fff 100%);
-          box-shadow: 0.5px 1.5px 0.55rem 0 rgba(169, 169, 169, 0.83);
-          margin-left: 15px;
+          background: -webkit-linear-gradient( red 0%,#fffffff9 100%);
+          box-shadow: 0.5px 1.53px 0.5rem 0 rgba(167, 167, 167, 0.799);
+          
           margin-top: 0.49rem;
          }
 
