--- a/index.html
+++ b/index.html
@@ -834,9 +834,9 @@ animation: auto 12s infinite ease-in;
     width: 74%;
     height: auto;
     font-family:Georgia, 'Times New Roman', Times, serif; 
-    font-size: 19.49px; 
+    font-size: 20px; 
+    color: #6c6c6cf6;
     line-height: 28px;
-    color: rgba(16, 16, 16, 0.899);
     padding: 10px;
 }
 .k1 img{
@@ -955,9 +955,9 @@ animation: auto 12s infinite ease-in;
     width: 101%;
     height: auto;
     font-family:Georgia, 'Times New Roman', Times, serif; 
-    font-size: 19.49px; 
+    font-size: 20px; 
+    color: #6c6c6cf6; 
     line-height: 28px;
-    color: rgba(16, 16, 16, 0.899);
 }
 
 .CRT2{
@@ -1207,10 +1207,10 @@ height: 220px;
 .TXT{
   width: 100%;
   height: auto;
-    font-family:Georgia, 'Times New Roman', Times, serif; 
-    font-size: 19.49px; 
+    font-family:Georgia, 'Times New Roman', Times, serif;  
     line-height: 28px;
-    color: rgba(16, 16, 16, 0.899);
+    font-size: 20px; 
+    color: #6c6c6cf6; 
     text-align: justify;
 }
 
@@ -1225,9 +1225,9 @@ height: 220px;
     width: 72.5%;
     height: auto;
     font-family:Georgia, 'Times New Roman', Times, serif; 
-    font-size: 19.49px; 
+    font-size: 20px; 
+    color: #6c6c6cf6;  
     line-height: 28px;
-    color: rgba(16, 16, 16, 0.899);
     border-top: 0.1rem solid #000;
 }
 
@@ -1240,9 +1240,9 @@ height: 220px;
   width: 100%;
   height: auto;
     font-family:Georgia, 'Times New Roman', Times, serif; 
-    font-size: 19.49px; 
+    font-size: 20px; 
+    color: #6c6c6cf6; 
     line-height: 28px;
-    color: rgba(16, 16, 16, 0.899);
 }
 
 .CHRZiniare {
@@ -1290,9 +1290,9 @@ transition: 0.26s linear;
   width: 100%;
   height: auto;
     font-family:Georgia, 'Times New Roman', Times, serif; 
-    font-size: 19.49px; 
+    font-size: 20px; 
+    color: #6c6c6cf6;  
     line-height: 28px;
-    color: rgba(16, 16, 16, 0.899);
     border-top: 0.1rem solid #000;
 }
 
@@ -1324,9 +1324,9 @@ transition: 0.26s linear;
   width: 74%;
   height: auto;
     font-family:Georgia, 'Times New Roman', Times, serif; 
-    font-size: 19.49px; 
     line-height: 28px;
-    color: rgba(16, 16, 16, 0.899);
+    font-size: 20px; 
+    color: #6c6c6cf6; 
     border-top: 0.1rem solid #000;
     margin-top: 2.5rem;
   
@@ -1334,9 +1334,9 @@ transition: 0.26s linear;
 
 .Texo{
     font-family:Georgia, 'Times New Roman', Times, serif; 
-    font-size: 19.49px; 
     line-height: 28px;
-    color: rgba(16, 16, 16, 0.899);
+    font-size: 20px; 
+    color: #6c6c6cf6; 
     text-align: justify;
 }
 
