--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
             width: 100%;
             border-radius: 0.5rem;
             background: transparent;
-            color:rgba(25, 43, 205, 0.992);
+            color:red;
             margin-top: 1.65rem;
             padding: 9px;
             font-family:'comic sans ms';
@@ -2624,5 +2624,6 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
