--- a/index.html
+++ b/index.html
@@ -2282,7 +2282,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         </span>
         <br><br>
           
-          Il n'y a aucun doute que quand les un-es mangent à leur faim, à quelque part à travers le monde, il y a aussi d'autres qui meurent de faim. C'est une réalité paradoxale qui touche malheureusement des milliers de personnes. 
+          Il n'y a aucun doute que quand les un-es mangent à leur faim, à quelque part à travers le monde, il y a aussi d'autres qui meurent de faim. En 2023 près de 783 millions de personnes de la population globale ne sont pas sûres de pouvoir s'assurer un repas quotidien <a href="https://www.wfp.org/global-hunger-crisis" target="_blank">[Sources: F.A.O (FONDS DES NATIONS UNIES CONTRE LA FAIM)]</a>.
           <br>
           <br>
           L'insécurité alimentaire s'est surtout aggravée dans les pays en proie au terrorisme violent qui a généré une crise humanitaire avec un grand nombre de réfugiés internes
@@ -2624,6 +2624,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
