--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
       display: grid;
       grid-template-rows: 0.85fr 0.8fr 0.5fr 0.95fr;
                  justify-content: center;
+                 row-gap: 0.1rem;
                  justify-items: center;
                  background: rgba(35, 49, 205, 0.989);
                  width: 100%;
