--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 .top-container{
         display: grid;
-        grid-template-columns: 0.55fr 0.5fr 0.5fr 1.45fr;
+        grid-template-columns: 0.6fr 0.5fr 0.5fr 1.45fr;
         justify-content: center;
         justify-items: center;
         width: 100%;
@@ -211,7 +211,7 @@
             margin-top: 1.65rem;
             padding: 9px;
             font-family:'comic sans ms';
-            font-size: 18px;
+            font-size: 17px;
 }
 
 .TYK1:hover{
@@ -289,14 +289,14 @@
             align-items: center;
             cursor: pointer;
             height: auto;
-            width: 100%;
+            width: 90%;
             border-radius: 0.5rem;
             background: transparent;
             color: rgba(25, 43, 205, 0.992);
             margin-top: 1.65rem;
             padding: 9px;
             font-family:'comic sans ms';
-            font-size: 18px;
+            font-size: 17px;
           }
 
           .myDiv:hover{
@@ -314,14 +314,14 @@
             align-items: center;
             cursor: pointer;
             height: auto;
-            width: 100%;
+            width: 90%;
             border-radius: 0.5rem;
             background: transparent;
             color: rgba(25, 43, 205, 0.992);
             margin-top: 1.65rem;
             padding: 9px;
             font-family:'comic sans ms';
-            font-size: 18px;
+            font-size: 17px;
           }
 
           .myDiv1:hover{
@@ -346,7 +346,7 @@
             margin-top: 1.65rem;
             padding: 9px;
             font-family:'comic sans ms';
-            font-size: 18px;
+            font-size: 17px;
             }
 
           .myDiv2:hover{
@@ -364,14 +364,14 @@
             align-items: center;
             cursor: pointer;
             height: auto;
-            width: 100%;
+            width: 90%;
             border-radius: 0.5rem;
             background: transparent;
             color:rgba(25, 43, 205, 0.992);
             margin-top: 1.65rem;
             padding: 9px;
             font-family:'comic sans ms';
-            font-size: 18px;
+            font-size: 17px;
           }
           .myDivT:hover{
             background: -webkit-linear-gradient(rgb(255, 1, 1) 1%,rgb(255, 34, 5)) 99%;
@@ -388,14 +388,14 @@
             align-items: center;
             cursor: pointer;
             height: auto;
-            width: 100%;
+            width: 90%;
             border-radius: 0.5rem;
             background: transparent;
             color:rgba(25, 43, 205, 0.992);
             margin-top: 1.65rem;
             padding: 9px;
             font-family:'comic sans ms';
-            font-size: 18px;
+            font-size: 17px;
           }
 
           .Peinture:hover{
@@ -414,14 +414,14 @@
             align-items: center;
             cursor: pointer;
             height: auto;
-            width: 100%;
+            width: 90%;
             border-radius: 0.5rem;
             background: transparent;
             color:rgba(25, 43, 205, 0.992);;
             margin-top: 1.65rem;
             padding: 9px;
             font-family:'comic sans ms';
-            font-size: 18px;
+            font-size: 17px;
             }
 
           .myDiv6:hover{
@@ -1385,8 +1385,8 @@ transition: 0.26s linear;
 
 .Painting{
   display: grid;
-  grid-template-columns: 0.5fr 0.5fr;
-  grid-template-rows:  0.5fr 0.5fr;
+  grid-template-columns: 0.45fr 0.45fr;
+  grid-template-rows:  0.45fr 0.45fr;
   column-gap: 0.2rem;
   row-gap: 0.2rem;
   justify-content: space-between;
@@ -1893,7 +1893,7 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
   <img src="https://www.zupimages.net/up/23/28/mhd5.jpg" alt="Tableau">
 <figure>
 <figcaption style="color: #545454eb; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; margin-top: -3px; font-size: 15px; text-align: left; line-height: 17px;">
-<b>Alphabet de la lettre [ M ]</b>
+<b>Alphabet sur la lettre M </b>
 </figcaption>
 </figure>
 </div>
@@ -2625,8 +2625,3 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
-
-
-
-
-
