--- a/index.html
+++ b/index.html
@@ -180,14 +180,13 @@
       display: flex;
       justify-content: center;
       align-items: center;
-                background: rgb(161, 180, 255);
+                background: rgb(9, 49, 209);
                  width: 100%;
-                 height: 92px;
+                 height: 91px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
-                 position: sticky;
-                 box-shadow: 0 2px 0.6rem #fff;
+                 position: sticky;   
           }
           
           
@@ -201,7 +200,7 @@
             width: 100%;
             border-radius: 0.5rem;
             background: transparent;
-            color:#000;
+            color:#ff0;
             padding: 9px;
             font-family:'comic sans ms';
             font-size: 17px;
@@ -212,7 +211,7 @@
             border-bottom: 0.71rem solid rgb(1, 255, 14);
             color: rgba(255, 255, 255, 0.992);
             transition: 0.3s ease;
-            box-shadow: 4.45px -5px 0.4rem 0 rgba(4, 11, 54, 0.992);
+            box-shadow: 4.45px -5px 0.4rem 0 transparent;
 }
 
           .navbar0{
@@ -244,7 +243,7 @@
           flex-direction: column; 
           justify-content: center; 
           align-items: center; 
-          color: #000;
+          color: #ff0;
           width: 100%; 
           height: 75px; 
           padding: 9.5px; 
@@ -274,7 +273,7 @@
             width: 100%;
             border-radius: 0.5rem;
             background: transparent;
-            color: #000;
+            color: #ff0;
             padding: 9px;
             font-family:'comic sans ms';
             font-size: 17px;
@@ -298,7 +297,7 @@
             width: 100%;
             border-radius: 0.5rem;
             background: transparent;
-            color: #000;
+            color: #ff0;
             padding: 9px;
             font-family:'comic sans ms';
             font-size: 17px;
@@ -322,7 +321,7 @@
             width: 100%;
             border-radius: 0.5rem;
             background: transparent;
-            color:#000;
+            color:#ff0;
             padding: 9px;
             font-family:'comic sans ms';
             font-size: 17px;
@@ -346,7 +345,7 @@
             width: 100%;
             border-radius: 0.5rem;
             background: transparent;
-            color:#000;
+            color:#ff0;
             padding: 9px;
             font-family:'comic sans ms';
             font-size: 17px;
@@ -369,7 +368,7 @@
             width: 100%;
             border-radius: 0.5rem;
             background: transparent;
-            color:#000;
+            color:#ff0;
             padding: 9px;
             font-family:'comic sans ms';
             font-size: 17px;
@@ -394,7 +393,7 @@
             width: 100%;
             border-radius: 0.5rem;
             background: transparent;
-            color: #000;
+            color: #ff0;
             padding: 9px;
             font-family:'comic sans ms';
             font-size: 17px;
@@ -2584,6 +2583,4 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
-
-
 
