--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
   background: -webkit-linear-gradient(rgb(255, 1, 1) 1%,rgb(255, 34, 5)) 99%;
             border-bottom: 0.71rem solid rgb(1, 255, 14);
             color: rgba(255, 255, 255, 0.992);
-            transition: 0.3s ease;
-            box-shadow: 4.45px -5px 0.4rem 0 transparent;
+            transition: 0.18s ease;
+            box-shadow: 4.45px -5px 0.4rem 0 rgba(4, 11, 54, 0.992);
 }
 
           .navbar0{
@@ -257,7 +257,7 @@
 
          .YIKI:hover{
           background: -webkit-linear-gradient(#fffffffd 0%, #fff 100%);
-          transition: 0.3s ease;
+          transition: 0.18s ease;
           color: #252525f4;
           box-shadow: 0.2px 0.1px 0.65rem 0 #adadadae;
          }
@@ -283,7 +283,7 @@
             background: -webkit-linear-gradient(rgb(255, 1, 1) 1%,rgb(255, 34, 5)) 99%;
             border-bottom: 0.71rem solid rgb(1, 255, 14);
             color: rgba(255, 255, 255, 0.992);
-            transition: 0.3s ease;
+            transition: 0.18s ease;
             box-shadow: 4.45px -5px 0.4rem 0 rgba(4, 11, 54, 0.992);
           }
 
@@ -307,7 +307,7 @@
             background: -webkit-linear-gradient(rgb(255, 1, 1) 1%,rgb(255, 34, 5)) 99%;
             border-bottom: 0.71rem solid rgb(1, 255, 14);
             color: rgba(255, 255, 255, 0.992);
-            transition: 0.3s ease;
+            transition: 0.18s ease;
             box-shadow: 4.45px -5px 0.4rem 0 rgba(4, 11, 54, 0.992);
           }
 
@@ -331,7 +331,7 @@
             background: -webkit-linear-gradient(rgb(255, 1, 1) 1%,rgb(255, 34, 5)) 99%;
             border-bottom: 0.71rem solid rgb(1, 255, 14);
             color: rgba(255, 255, 255, 0.992);
-            transition: 0.3s ease;
+            transition: 0.18s ease;
             box-shadow: 4.45px -5px 0.4rem 0 rgba(4, 11, 54, 0.992);
           }
 
@@ -354,7 +354,7 @@
             background: -webkit-linear-gradient(rgb(255, 1, 1) 1%,rgb(255, 34, 5)) 99%;
             border-bottom: 0.71rem solid rgb(1, 255, 14);
             color: rgba(255, 255, 255, 0.992);
-            transition: 0.3s ease;
+            transition: 0.18s ease;
             box-shadow: 4.45px -5px 0.4rem 0 rgba(4, 11, 54, 0.992);
           }
 
@@ -378,7 +378,7 @@
             background: -webkit-linear-gradient(rgb(255, 1, 1) 1%,rgb(255, 34, 5)) 99%;
             border-bottom: 0.71rem solid rgb(1, 255, 14);
             color: rgba(255, 255, 255, 0.992);
-            transition: 0.3s ease;
+            transition: 0.18s ease;
             box-shadow: 4.45px -5px 0.4rem 0 rgba(4, 11, 54, 0.992);
           }
 
@@ -403,7 +403,7 @@
             background: -webkit-linear-gradient(rgb(255, 1, 1) 1%,rgb(255, 34, 5)) 99%;
             border-bottom: 0.71rem solid rgb(1, 255, 14);
             color: rgba(255, 255, 255, 0.992);
-            transition: 0.3s ease;
+            transition: 0.18s ease;
             box-shadow: 4.45px -5px 0.4rem 0 rgba(4, 11, 54, 0.992);
           }
 
@@ -2583,4 +2583,5 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
