--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
       display: flex;
       justify-content: center;
       align-items: center;
-                background: rgb(9, 49, 209);
+                background: rgb(10, 48, 199);
                  width: 100%;
-                 height: 91px;
+                 height: 77px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
@@ -221,10 +221,10 @@
             justify-items: center;
             column-gap: 1rem;
             width: 100%; 
-            height: 126px; 
-            background: #b8b8b857;
-            border-bottom: 0.6rem solid rgba(255, 85, 0, 0.815);
-            opacity: 0.98;
+            height: 136px; 
+            background: #b8b8b858;
+            border-bottom: 0.6rem solid rgba(255, 89, 0, 0.841);
+            opacity: 0.99;
           }
           .BIEN{
             display: grid;
@@ -245,10 +245,11 @@
           align-items: center; 
           color: #ff0;
           width: 100%; 
-          height: 75px; 
+          height: 63px; 
           padding: 9.5px; 
           font-size: 1.15rem; 
           font-family: 'arial'; 
+          border-top: 0.1rem solid rgba(9, 49, 209, 0.597);
           border-bottom-left-radius: 50rem;
           border-bottom-right-radius: 50rem;
           background: -webkit-linear-gradient( red 0%,#fffffff9 100%);
@@ -2583,5 +2584,6 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
