--- a/index.html
+++ b/index.html
@@ -1649,7 +1649,7 @@ function myFunction() {
 
       <a href="https://blogs.worldbank.org/fr/education/leducation-comme-un-droit-pour-les-enfants-en-afrique-de-louest-et-centrale" target="_blank">
      
-        <div class="Glober" style="margin-top: 3rem;">
+        <div class="Glober">
           
       <div class="k-image">
   
@@ -2584,6 +2584,3 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
-
-
-
