--- a/index.html
+++ b/index.html
@@ -725,8 +725,8 @@ position: relative;
   grid-template-rows: 0.5fr 1.5fr;
   width: 100%;
   height: auto;
-  animation: auto 12s infinite ease-in;
-    animation-delay: 4s;
+  animation: auto 15s infinite linear;
+    animation-delay: 5s;
     position: absolute;
     padding: 10px;
 }
@@ -753,8 +753,8 @@ position: relative;
   justify-items: center;
   width: 100%;
   height: auto;
-  animation: auto 12s infinite ease-in;
-    animation-delay: 12s;
+  animation: auto 15s infinite linear;
+    animation-delay: 10s;
     position: absolute;
     padding: 10px;
 }
@@ -777,8 +777,8 @@ position: relative;
   justify-items: center;
   width: 100%;
   height: auto;
-animation: auto 12s infinite ease-in;
-    animation-delay: 8s;
+animation: auto 15s infinite linear;
+    animation-delay: 15s;
     position: absolute;
     padding: 10px;
 }
@@ -2584,3 +2584,4 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
