--- a/index.html
+++ b/index.html
@@ -464,21 +464,6 @@ h5{
     margin-top: -9%;
     text-align: center;
 }
-
-  h6{
-    display: flex;
-    position: relative;
-    align-items: center;
-    justify-content: center;
-}
-
-hr{
-   width: 100%;
-    align-self: center;  
-    margin-top: 10px;
-    margin-bottom: 8px;
-}
-
  
 .fwrapper{
     display: flex;
@@ -1342,7 +1327,7 @@ transition: 0.26s linear;
   grid-template-rows:  0.45fr 0.45fr;
   justify-content: space-between;
   justify-items: center;
-  width: 81%;
+  width: 82%;
   height: auto;
   background: transparent;
 }
@@ -1361,7 +1346,7 @@ transition: 0.26s linear;
 
 .P1 img{
   width: 90%;
-  height: 320px;
+  height: 310px;
 }
 .PHOTOCAPTION{
   display: flex;
@@ -2224,7 +2209,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         </span>
         <br><br>
           
-          Il n'y a aucun doute que quand les un-es mangent à leur faim, à quelque part à travers le monde, il y a aussi d'autres qui meurent de faim. En 2023 près de 783 millions de personnes de la population globale ne sont pas sûres de pouvoir s'assurer un repas quotidien <a href="https://www.wfp.org/global-hunger-crisis" target="_blank">[Sources: F.A.O (FONDS DES NATIONS UNIES CONTRE LA FAIM)]</a>.
+          Il n'y a aucun doute que quand les un-es mangent à leur faim, à quelque part à travers le monde, il y a aussi d'autres qui meurent de faim. En 2023 près de 783 millions de personnes de la population globale ne sont pas sûres de pouvoir s'assurer un repas quotidien. <a href="https://www.wfp.org/global-hunger-crisis" target="_blank">[Sources: P.A.M (Programme Alimentaire Mondial)]</a>
           <br>
           <br>
           L'insécurité alimentaire s'est surtout aggravée dans les pays en proie au terrorisme violent qui a généré une crise humanitaire avec un grand nombre de réfugiés internes
@@ -2468,10 +2453,11 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         Copyright © Noah Berger/AP Photo 
     </figcation>
       </figure>
-   </div>
-   <a name="PROMOTEUR"></a>  
+   </div> 
   </div>
 </div>
+
+<a name="PROMOTEUR"></a> 
 
   <div class="kptr">
   
@@ -2566,6 +2552,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
