--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
           .navbar0{
             display: grid;
-           grid-template-columns: 0.5fr 1.5fr;
+            grid-template-columns: 0.5fr 1.5fr;
             justify-content: left;
             justify-items: center;
             column-gap: 1rem;
@@ -232,9 +232,10 @@
             justify-items: center;
             color: rgba(17, 54, 156, 0.795);
             font-family:'arial black'; 
-            font-size: 1.75rem;
+            font-size: 1rem;
             text-align: left;
             margin-top: 1rem;
+            width: 78%;
           }
 
           .YIKI{
@@ -246,8 +247,9 @@
           width: 100%; 
           height: 55px; 
           padding: 9.5px; 
-          font-size: 1.1rem; 
+          font-size: 0.95rem; 
           font-family: 'arial'; 
+          line-height: 20px;
           border-top: 0.1rem solid rgba(9, 49, 209, 0.55);
           border-bottom-left-radius: 50rem;
           border-bottom-right-radius: 50rem;
@@ -1447,7 +1449,7 @@ function myFunction() {
 
         <div class="YIKI">
         
-        <p style="margin-top: 20px;"> <b>Tiki N'Yiki</b></p>
+        <p style="margin-top: 15px;"> <b>Tiki N'Yiki</b></p>
       
                 </div>
               </a>
@@ -1534,9 +1536,10 @@ function myFunction() {
   </a>
 
   <div class="BIEN"> 
-  Bienvenue ! Ce site web est en développement. 
+  Bienvenue sur ce site internet en développement ! La page web ci-dessous est sommairement descriptive du site une fois fini.
+  Certaines photos et certains liens hypertextes sont temporaires.
 <br>
-  Merci pour la compréhension ! Bonne Visite !</p>
+  Merci pour votre compréhension ! Bonne Visite !</p>
 </div>
 
 </div>
@@ -2546,5 +2549,6 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
