--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@ animation: auto 15s infinite linear;
     height: auto;
     font-family:Georgia, 'Times New Roman', Times, serif; 
     font-size: 20px; 
-    color: #5b5b5bf8;
+    color: #000;
     line-height: 28px;
     padding: 10px;
 }
@@ -891,7 +891,7 @@ animation: auto 15s infinite linear;
     height: auto;
     font-family:Georgia, 'Times New Roman', Times, serif; 
     font-size: 20px; 
-    color: #5b5b5bf8;
+    color: #000;
     line-height: 28px;
 }
 
@@ -1145,7 +1145,7 @@ height: 220px;
     font-family:Georgia, 'Times New Roman', Times, serif;  
     line-height: 28px;
     font-size: 20px; 
-    color: #5b5b5bf8;
+    color: #000;
     text-align: justify;
 }
 
@@ -1161,7 +1161,7 @@ height: 220px;
     height: auto;
     font-family:Georgia, 'Times New Roman', Times, serif; 
     font-size: 20px; 
-    color: #5b5b5bf8;
+    color: #000;
     line-height: 28px;
     border-top: 0.1rem solid #000;
 }
@@ -1176,7 +1176,7 @@ height: 220px;
   height: auto;
     font-family:Georgia, 'Times New Roman', Times, serif; 
     font-size: 20px; 
-    color: #5b5b5bf8;
+    color: #000;
     line-height: 28px;
 }
 
@@ -1261,7 +1261,7 @@ transition: 0.26s linear;
     font-family:Georgia, 'Times New Roman', Times, serif; 
     line-height: 28px;
     font-size: 20px; 
-    color: #5b5b5bf8;
+    color: #000;
     border-top: 0.1rem solid #000;
     margin-top: 2.5rem;
   
@@ -1271,7 +1271,7 @@ transition: 0.26s linear;
     font-family:Georgia, 'Times New Roman', Times, serif; 
     line-height: 28px;
     font-size: 20px; 
-    color: #5b5b5bf8;
+    color: #000;
     text-align: justify;
 }
 
@@ -2549,6 +2549,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
