--- a/index.html
+++ b/index.html
@@ -1226,7 +1226,7 @@ transition: 0.26s linear;
   height: auto;
     font-family:Georgia, 'Times New Roman', Times, serif; 
     font-size: 20px; 
-    color: #5b5b5bf8;
+    color: #000;
     line-height: 28px;
     border-top: 0.1rem solid #000;
 }
@@ -2549,7 +2549,5 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
-
-
 
 
