--- a/index.html
+++ b/index.html
@@ -460,6 +460,13 @@ h5{
     margin-top: -9%;
     text-align: center;
 }
+
+hr{
+   width: 100%;
+    align-self: center;  
+    margin-top: 10px;
+    margin-bottom: 8px;
+}
  
 .fwrapper{
     display: flex;
@@ -2549,5 +2556,6 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
